--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
       <p>By entering this vault, you agree to the following:</p>
       <ul>
         <li>You will not reproduce or distribute any card imagery without permission.</li>
-        <li>You acknowledge that all content is protected under lore-based licensing.</li>
-        <li>You accept the terms of digital engagement and community conduct.</li>
+        <li>Intellectual Property - All card designs are the exclusive property of The Dead Cards.  Any other images including personal photos, TV, movie or other characters requested for use by the customer or any backdrops, other images or assets requested for use in the image are property of their legal owners.</li>
+        <li>Social Sharing - You may share your digital card to social media platforms for public viewing.</li>
+        <li>Digital Signature Agreement - By clicking “I Accept,” you digitally affirm your agreement to these terms and acknowledge that access may be revoked for violations.</li>
       </ul>
     </div>
     <div class="checkbox">
