--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
       padding: 0;
     }
 
+    body, img {
+      user-select: none;
+      -webkit-user-drag: none;
+    }
+
+    body {
+      pointer-events: auto;
+    }
+
     .container {
-      max-width: 800px;
+      max-width: 900px;
       margin: 50px auto;
       padding: 20px;
       background: #222;
@@ -66,21 +75,23 @@
 
     .card-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 30px;
     }
 
     .card {
       background: #333;
       border: 2px solid #ff4444;
       border-radius: 8px;
-      padding: 10px;
+      padding: 15px;
       text-align: center;
+      position: relative;
     }
 
     .card img {
       width: 100%;
       border-radius: 5px;
+      pointer-events: none;
     }
 
     .card-title {
@@ -88,18 +99,33 @@
       font-weight: bold;
       color: #fff;
     }
+
+    .copy-btn {
+      margin-top: 10px;
+      padding: 8px 12px;
+      background-color: #ff4444;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 0.9em;
+    }
+
+    .copy-btn:hover {
+      background-color: #cc0000;
+    }
   </style>
 </head>
-<body>
+<body oncontextmenu="return false">
   <div class="container" id="terms-container">
     <h1>Welcome to The Dead Cards Vault</h1>
     <div class="terms">
       <p>By entering this vault, you agree to the following:</p>
       <ul>
         <li>You will not reproduce or distribute any card imagery without permission.</li>
-        <li>Intellectual Property - All card designs are the exclusive property of The Dead Cards.  Any other images including personal photos, TV, movie or other characters requested for use by the customer or any backdrops, other images or assets requested for use in the image are property of their legal owners.</li>
-        <li>Social Sharing - You may share your digital card to social media platforms for public viewing.</li>
-        <li>Digital Signature Agreement - By clicking “I Accept,” you digitally affirm your agreement to these terms and acknowledge that access may be revoked for violations.</li>
+        <li>Intellectual Property – All card designs are the exclusive property of The Dead Cards. Any other images including personal photos, TV, movie or other characters requested for use by the customer or any backdrops, other images or assets requested for use in the image are property of their legal owners.</li>
+        <li>Social Sharing – You may share your digital card to social media platforms for public viewing.</li>
+        <li>Digital Signature Agreement – By clicking “I Accept,” you agree to these terms and acknowledge that access may be revoked for violations.</li>
       </ul>
     </div>
     <div class="checkbox">
@@ -111,20 +137,8 @@
 
   <div class="container gallery" id="gallery-container">
     <h2>The Dead Cards Digital Card Gallery</h2>
-    <div class="card-grid">
-      <div class="card">
-        <img src="https://sandbox.weebly.com/uploads/b/f2d81fce9b84d6b4feb15bfb2b3f81b33c795b40baa08ccf0d9f2fbaedc03490/TWDUNIV_Gabriel_1756353540.JPG?width=2400&optimize=medium" alt="Card 1" />
-        <div class="card-title">Gabriel</div>
-      </div>
-      <div class="card">
-        <img src="https://yourweeblysite.weebly.com/uploads/card2.jpg" alt="Card 2" />
-        <div class="card-title">The Hollow Sheriff</div>
-      </div>
-      <div class="card">
-        <img src="https://yourweeblysite.weebly.com/uploads/card3.jpg" alt="Card 3" />
-        <div class="card-title">Bloodbound Oracle</div>
-      </div>
-      <!-- Add more cards as needed -->
+    <div class="card-grid" id="card-grid">
+      <!-- Cards will be injected here -->
     </div>
   </div>
 
@@ -133,6 +147,7 @@
     const enterBtn = document.getElementById('enter-btn');
     const termsContainer = document.getElementById('terms-container');
     const galleryContainer = document.getElementById('gallery-container');
+    const cardGrid = document.getElementById('card-grid');
 
     checkbox.addEventListener('change', () => {
       enterBtn.disabled = !checkbox.checked;
@@ -141,6 +156,43 @@
     enterBtn.addEventListener('click', () => {
       termsContainer.style.display = 'none';
       galleryContainer.style.display = 'block';
+    });
+
+    function copyLink(url) {
+      navigator.clipboard.writeText(url).then(() => {
+        alert("Link copied to clipboard!");
+      }).catch(err => {
+        console.error("Failed to copy: ", err);
+      });
+    }
+
+    // 🧱 Modular card data
+    const cards = [
+      {
+        title: "Gabriel",
+        imageUrl: "https://sandbox.weebly.com/uploads/b/f2d81fce9b84d6b4feb15bfb2b3f81b33c795b40baa08ccf0d9f2fbaedc03490/TWDUNIV_Gabriel_1756353540.JPG?width=2400&optimize=medium"
+      },
+      {
+        title: "The Hollow Sheriff",
+        imageUrl: "https://yourweeblysite.weebly.com/uploads/card2.jpg"
+      },
+      {
+        title: "Bloodbound Oracle",
+        imageUrl: "https://yourweeblysite.weebly.com/uploads/card3.jpg"
+      }
+      // Add more cards here
+    ];
+
+    // 🧩 Render cards dynamically
+    cards.forEach(card => {
+      const cardElement = document.createElement('div');
+      cardElement.className = 'card';
+      cardElement.innerHTML = `
+        <img src="${card.imageUrl}" alt="${card.title}" />
+        <div class="card-title">${card.title}</div>
+        <button class="copy-btn" onclick="copyLink('${card.imageUrl}')">Copy Share Link</button>
+      `;
+      cardGrid.appendChild(cardElement);
     });
   </script>
 </body>
