--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
       <p>By entering this vault, you agree to the following:</p>
       <ul>
         <li>You will not reproduce or distribute any card imagery without permission.</li>
-        <li>Intellectual Property – All designs are the exclusive property of The Dead Cards. Any images used in this creation including personal photos, TV, movie or other characters or any other images or assets requested for use in the image are property of their legal owners.</li>
-        <li>Social Sharing – You may share your digital card to social media platforms for public viewing.</li>
+        <li>All designs are the exclusive property of The Dead Cards. Any images requested for use in these designs are property of their legal owners and are not claimed as property of The Dead Cards.</li>
+        <li>You give The Dead Cards full and unlimited permission to use your personal photo and images in these designs.</li>
+        <li>Social Sharing – You may share your digital card to social media platforms for public viewing using the supplied link buttons.</li>
         <li>Digital Signature Agreement – By clicking “I Accept,” you agree to these terms and acknowledge that access may be revoked for violations.</li>
       </ul>
     </div>
