--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     // 🧱 Modular card data
     const cards = [
       {
-        title: "Gabriel",
-        imageUrl: "https://sandbox.weebly.com/uploads/b/f2d81fce9b84d6b4feb15bfb2b3f81b33c795b40baa08ccf0d9f2fbaedc03490/TWDUNIV_Gabriel_1756353540.JPG?width=2400&optimize=medium"
+        title: "MeisterKhan",
+        imageUrl: "https://sandbox.weebly.com/uploads/b/f2d81fce9b84d6b4feb15bfb2b3f81b33c795b40baa08ccf0d9f2fbaedc03490/MeisterKhan_1757347611.jpg?width=2400&optimize=medium"
       },
       {
         title: "The Hollow Sheriff",
